tests/sqllogic/sdb/pg/index/ts_dict_cartesian_multi.test
hash-threshold 100

# AUTO-GENERATED by gen_multi.py: two enumerated ts_dict fields (body,title)
# in one scan. With no WHERE each field returns its full dictionary; a WHERE
# over a multi-field ts_dict_agg() is rejected for every per-field combination
# (constrain each field with a single-field subquery instead).

statement ok
CREATE TEXT SEARCH DICTIONARY md(template = 'text', locale = 'en_US.UTF-8',
    case = 'none', stemming = false, accent = false, frequency = true,
    position = true)

statement ok
CREATE TABLE mc(id INTEGER PRIMARY KEY, body VARCHAR, title VARCHAR,
                tag VARCHAR)

statement ok
CREATE INDEX mc_idx ON mc USING inverted(body md, title md, tag md)

statement ok
INSERT INTO mc SELECT i, concat_ws(' ', ARRAY['apple','aple','appl','apricot','avocado','banana','berry','blueberry','cherry','citrus','cranberry','date','dragonfruit','elderberry','fig','grape','guava','kiwi','lemon','lime','mango','melon','orange','papaya'][1 + (i % 24)], ARRAY['apple','aple','appl','apricot','avocado','banana','berry','blueberry','cherry','citrus','cranberry','date','dragonfruit','elderberry','fig','grape','guava','kiwi','lemon','lime','mango','melon','orange','papaya'][1 + ((i*7) % 24)]), concat_ws(' ', ARRAY['red','green','blue','yellow','orange','violet'][1 + (i % 6)], ARRAY['red','green','blue','yellow','orange','violet'][1 + ((i*5) % 6)]), (ARRAY['hot','cold','warm'])[1 + (i % 3)] FROM generate_series(1, 20000) g(i)

statement ok
VACUUM (REFRESH_TABLE) mc;

statement ok
INSERT INTO mc SELECT i, concat_ws(' ', ARRAY['apple','aple','appl','apricot','avocado','banana','berry','blueberry','cherry','citrus','cranberry','date','dragonfruit','elderberry','fig','grape','guava','kiwi','lemon','lime','mango','melon','orange','papaya'][1 + (i % 24)], ARRAY['apple','aple','appl','apricot','avocado','banana','berry','blueberry','cherry','citrus','cranberry','date','dragonfruit','elderberry','fig','grape','guava','kiwi','lemon','lime','mango','melon','orange','papaya'][1 + ((i*7) % 24)]), concat_ws(' ', ARRAY['red','green','blue','yellow','orange','violet'][1 + (i % 6)], ARRAY['red','green','blue','yellow','orange','violet'][1 + ((i*5) % 6)]), (ARRAY['hot','cold','warm'])[1 + (i % 3)] FROM generate_series(20001, 40000) g(i)

statement ok
VACUUM (REFRESH_TABLE) mc;

# === bnone + tnone
query
EXPLAIN SELECT ts_dict_agg(body) AS b, ts_dict_agg(title) AS t FROM mc_idx
----
QUERY PLAN
┌───────────────────────────┐
│    UNGROUPED_AGGREGATE    │
│    ────────────────────   │
│        Aggregates:        │
│ list(#0) FILTER (WHERE #1)│
│         Filter: #1        │
│ list(#2) FILTER (WHERE #3)│
│         Filter: #3        │
│                           │
│           ~1 row          │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│         PROJECTION        │
│    ────────────────────   │
│  sdb_inverted_index_term$ │
│ (sdb_inverted_index_term$ │
│        IS NOT NULL)       │
│  sdb_inverted_index_term$ │
│ (sdb_inverted_index_term$ │
│        IS NOT NULL)       │
│                           │
│        ~20,000 rows       │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       HASH_GROUP_BY       │
│    ────────────────────   │
│          Groups:          │
│             #0            │
│             #1            │
│                           │
│        ~20,000 rows       │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│         PROJECTION        │
│    ────────────────────   │
│             #0            │
│             #1            │
│                           │
│        ~40,000 rows       │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       IRESEARCH_SCAN      │
│    ────────────────────   │
│       Index: mc_idx       │
│    TsDict: body, title    │
│                           │
│        Projections:       │
│  sdb_inverted_index_term$ │
│  sdb_inverted_index_term$ │
│                           │
│        ~40,000 rows       │
└───────────────────────────┘

query
SELECT list_sort(ts_dict_agg(body)) AS b, list_sort(ts_dict_agg(title)) AS t FROM mc_idx
----
b	t
{aple,appl,apple,apricot,avocado,banana,berry,blueberry,cherry,citrus,cranberry,date,dragonfruit,elderberry,fig,grape,guava,kiwi,lemon,lime,mango,melon,orange,papaya}	{blue,green,orange,red,violet,yellow}

# === bnone + texact
statement error
SELECT ts_dict_agg(body), ts_dict_agg(title) FROM mc_idx WHERE (title = 'red')
----
db error: ERROR: ts_dict_agg() over multiple fields does not support a WHERE clause
HINT: constrain each field with a single-field ts_dict_agg subquery
